--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_recentworks_mosaic.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_recentworks_mosaic.yml
@@ -3,10 +3,15 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.su_casbs_author_links
     - field.storage.node.su_casbs_book_cover
+    - field.storage.node.su_casbs_book_publish_year
+    - field.storage.node.su_casbs_book_publisher
+    - image.style.breakpoint_md_2x
   module:
-    - image
+    - element_class_formatter
     - node
+    - text
     - user
 id: casbs_recentworks_mosaic
 label: casbs_recentworks_mosaic
@@ -61,6 +66,73 @@ display:
             trim: false
             preserve_tags: ''
             html: false
+          element_type: div
+          element_class: 'media image field-media-image'
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: div
+          element_wrapper_class: 'align-left media-entity-wrapper image'
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: image_class
+          settings:
+            image_link: content
+            image_style: breakpoint_md_2x
+            class: 'align-left media-entity-wrapper image'
+            image_loading:
+              attribute: lazy
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        su_casbs_author_links:
+          id: su_casbs_author_links
+          table: node__su_casbs_author_links
+          field: su_casbs_author_links
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
           element_type: ''
           element_class: ''
           element_label_type: ''
@@ -73,14 +145,134 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: image
-          settings:
-            image_link: content
-            image_style: ''
-            image_loading:
-              attribute: lazy
-          group_column: ''
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        su_casbs_book_publisher:
+          id: su_casbs_book_publisher
+          table: node__su_casbs_book_publisher
+          field: su_casbs_book_publisher
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        su_casbs_book_publish_year:
+          id: su_casbs_book_publish_year
+          table: node__su_casbs_book_publish_year
+          field: su_casbs_book_publish_year
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -253,7 +445,10 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.su_casbs_author_links'
         - 'config:field.storage.node.su_casbs_book_cover'
+        - 'config:field.storage.node.su_casbs_book_publish_year'
+        - 'config:field.storage.node.su_casbs_book_publisher'
   block_1:
     id: block_1
     display_title: Block
@@ -270,4 +465,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.su_casbs_author_links'
         - 'config:field.storage.node.su_casbs_book_cover'
+        - 'config:field.storage.node.su_casbs_book_publish_year'
+        - 'config:field.storage.node.su_casbs_book_publisher'
