--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.paragraph.stanford_lists.su_list_view.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.paragraph.stanford_lists.su_list_view.yml
@@ -22,11 +22,14 @@ settings:
   allowed_views:
     stanford_shared_tags: stanford_shared_tags
     stanford_basic_pages: stanford_basic_pages
+    _book_mosaic: _book_mosaic
     casbs_board_of_directors: casbs_board_of_directors
+    casbs_book_mosaic: casbs_book_mosaic
     casbs_current_faculty_fellows_and_research_affiliates: casbs_current_faculty_fellows_and_research_affiliates
     casbs_current_fellows: casbs_current_fellows
     casbs_current_visiting_scholars: casbs_current_visiting_scholars
     casbs_recentworks: casbs_recentworks
+    casbs_recentworks_mosaic: casbs_recentworks_mosaic
     casbs_staff: casbs_staff
     stanford_courses: stanford_courses
     stanford_events: stanford_events
@@ -34,9 +37,6 @@ settings:
     stanford_person: stanford_person
     stanford_publications: stanford_publications
     su_block_edit_links: '0'
-    _book_mosaic: '0'
-    casbs_book_mosaic: '0'
-    casbs_recentworks_mosaic: '0'
     change_logs: '0'
     content: '0'
     block_content: '0'
