--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_staff.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_staff.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.node.su_casbs_person_bio
     - field.storage.node.su_casbs_profile_picture
     - field.storage.node.su_person_email
+    - field.storage.node.su_person_full_title
     - field.storage.node.su_person_telephone
     - image.style.medium
     - taxonomy.vocabulary.su_casbs_people_type
@@ -71,13 +72,13 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: div
-          element_class: 'media image field-media-image'
+          element_type: ''
+          element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: div
-          element_wrapper_class: 'align-left media-entity-wrapper image'
+          element_wrapper_type: ''
+          element_wrapper_class: ''
           element_default_classes: true
           empty: ''
           hide_empty: false
@@ -154,6 +155,68 @@ display:
           type: string
           settings:
             link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        su_person_full_title:
+          id: su_person_full_title
+          table: node__su_person_full_title
+          field: su_person_full_title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: blockquote
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: basic_string
+          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -499,10 +562,10 @@ display:
         options: {  }
       empty: {  }
       sorts:
-        su_casbs_custom_order_value:
-          id: su_casbs_custom_order_value
-          table: node__su_casbs_custom_order
-          field: su_casbs_custom_order_value
+        su_person_mail_code_value:
+          id: su_person_mail_code_value
+          table: node__su_person_mail_code
+          field: su_person_mail_code_value
           relationship: none
           group_type: group
           admin_label: ''
@@ -623,6 +686,7 @@ display:
         - 'config:field.storage.node.su_casbs_person_bio'
         - 'config:field.storage.node.su_casbs_profile_picture'
         - 'config:field.storage.node.su_person_email'
+        - 'config:field.storage.node.su_person_full_title'
         - 'config:field.storage.node.su_person_telephone'
   viewfield_block_1:
     id: viewfield_block_1
@@ -646,4 +710,5 @@ display:
         - 'config:field.storage.node.su_casbs_person_bio'
         - 'config:field.storage.node.su_casbs_profile_picture'
         - 'config:field.storage.node.su_person_email'
+        - 'config:field.storage.node.su_person_full_title'
         - 'config:field.storage.node.su_person_telephone'
