Add author name to recentworks and recentworks mosaic

--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_recentworks_mosaic.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_recentworks_mosaic.yml
@@ -4,13 +4,15 @@ status: true
 dependencies:
   config:
     - field.storage.node.su_casbs_author_links
+    - field.storage.node.su_casbs_author_name
     - field.storage.node.su_casbs_book_cover
     - field.storage.node.su_casbs_book_publish_year
     - field.storage.node.su_casbs_book_publisher
-    - image.style.breakpoint_md_2x
+    - field.storage.node.su_casbs_book_title
+    - responsive_image.styles.full_responsive
   module:
-    - element_class_formatter
     - node
+    - responsive_image
     - text
     - user
 id: casbs_recentworks_mosaic
@@ -66,27 +68,86 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: div
-          element_class: 'media image field-media-image'
+          element_type: ''
+          element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
-          element_wrapper_type: div
-          element_wrapper_class: 'align-left media-entity-wrapper image'
-          element_default_classes: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: image_class
+          type: responsive_image
           settings:
-            image_link: content
-            image_style: breakpoint_md_2x
-            class: 'align-left media-entity-wrapper image'
-            image_loading:
-              attribute: lazy
+            responsive_image_style: full_responsive
+            image_link: ''
           group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        su_casbs_book_title:
+          id: su_casbs_book_title
+          table: node__su_casbs_book_title
+          field: su_casbs_book_title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: h2
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -100,6 +161,68 @@ display:
           id: su_casbs_author_links
           table: node__su_casbs_author_links
           field: su_casbs_author_links
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        su_casbs_author_name:
+          id: su_casbs_author_name
+          table: node__su_casbs_author_name
+          field: su_casbs_author_name
           relationship: none
           group_type: group
           admin_label: ''
@@ -415,15 +538,22 @@ display:
         type: grid
         options:
           grouping: {  }
-          columns: 6
+          columns: 1
           automatic_width: true
           alignment: horizontal
-          row_class_custom: ''
+          row_class_custom: 'align-left media-entity-wrapper image'
           row_class_default: true
           col_class_custom: ''
           col_class_default: true
       row:
         type: fields
+        options:
+          default_field_elements: true
+          inline:
+            su_casbs_book_cover_1: su_casbs_book_cover_1
+            su_casbs_book_title: su_casbs_book_title
+          separator: ''
+          hide_empty: false
       query:
         type: views_query
         options:
@@ -446,9 +576,11 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.su_casbs_author_links'
+        - 'config:field.storage.node.su_casbs_author_name'
         - 'config:field.storage.node.su_casbs_book_cover'
         - 'config:field.storage.node.su_casbs_book_publish_year'
         - 'config:field.storage.node.su_casbs_book_publisher'
+        - 'config:field.storage.node.su_casbs_book_title'
   block_1:
     id: block_1
     display_title: Block
@@ -466,6 +598,8 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.su_casbs_author_links'
+        - 'config:field.storage.node.su_casbs_author_name'
         - 'config:field.storage.node.su_casbs_book_cover'
         - 'config:field.storage.node.su_casbs_book_publish_year'
         - 'config:field.storage.node.su_casbs_book_publisher'
+        - 'config:field.storage.node.su_casbs_book_title'
