--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_recentworks.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_recentworks.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.body
     - field.storage.node.su_casbs_author_links
+    - field.storage.node.su_casbs_author_name
     - field.storage.node.su_casbs_book_cover
     - field.storage.node.su_casbs_book_publish_year
     - field.storage.node.su_casbs_book_publisher
@@ -164,6 +165,68 @@ display:
           id: su_casbs_author_links
           table: node__su_casbs_author_links
           field: su_casbs_author_links
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        su_casbs_author_name:
+          id: su_casbs_author_name
+          table: node__su_casbs_author_name
+          field: su_casbs_author_name
           relationship: none
           group_type: group
           admin_label: ''
@@ -577,6 +640,7 @@ display:
       tags:
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.su_casbs_author_links'
+        - 'config:field.storage.node.su_casbs_author_name'
         - 'config:field.storage.node.su_casbs_book_cover'
         - 'config:field.storage.node.su_casbs_book_publish_year'
         - 'config:field.storage.node.su_casbs_book_publisher'
@@ -597,6 +661,7 @@ display:
       tags:
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.su_casbs_author_links'
+        - 'config:field.storage.node.su_casbs_author_name'
         - 'config:field.storage.node.su_casbs_book_cover'
         - 'config:field.storage.node.su_casbs_book_publish_year'
         - 'config:field.storage.node.su_casbs_book_publisher'
