--- a/docroot/profiles/custom/stanford_profile/config/sync/editor.editor.stanford_html.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/editor.editor.stanford_html.yml
@@ -18,7 +18,6 @@ settings:
       - horizontalLine
       - style
       - heading
-      - removeFormat
       - '|'
       - link
       - '|'
@@ -125,7 +124,8 @@ settings:
     media_media:
       allow_view_mode_override: true
     linkit_extension:
-      linkit_enabled: false
+      linkit_enabled: true
+      linkit_profile: default
 image_upload:
   status: false
   scheme: public
