--- a/docroot/profiles/custom/stanford_profile/config/sync/user.role.contributor.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/user.role.contributor.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - filter.format.stanford_html
     - media.type.file
     - media.type.google_form
     - media.type.image
@@ -22,6 +23,7 @@ dependencies:
     - dropzonejs
     - eck
     - editoria11y
+    - filter
     - media
     - menu_admin_per_menu
     - node
@@ -108,6 +110,7 @@ permissions:
   - 'mark as hidden in editoria11y'
   - 'schedule publishing of nodes'
   - 'update media'
+  - 'use text format stanford_html'
   - 'view all revisions'
   - 'view any log entities'
   - 'view any unpublished stanford_course content'
