--- a/docroot/profiles/custom/stanford_profile/config/sync/user.role.site_editor.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/user.role.site_editor.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - filter.format.stanford_html
     - media.type.embeddable
     - media.type.file
     - media.type.google_form
@@ -39,6 +40,7 @@ dependencies:
     - eck
     - editoria11y
     - field_permissions
+    - filter
     - media
     - menu_admin_per_menu
     - node
@@ -218,6 +220,7 @@ permissions:
   - 'revert stanford_publication revisions'
   - 'schedule publishing of nodes'
   - 'update media'
+  - 'use text format stanford_html'
   - 'use views bulk edit'
   - 'view all media revisions'
   - 'view all revisions'
