--- a/docroot/profiles/custom/stanford_profile/config/sync/user.role.site_manager.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/user.role.site_manager.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - filter.format.stanford_html
     - media.type.embeddable
     - media.type.file
     - media.type.google_form
@@ -42,6 +43,7 @@ dependencies:
     - eck
     - editoria11y
     - field_permissions
+    - filter
     - media
     - menu_admin_per_menu
     - node
@@ -265,6 +267,7 @@ permissions:
   - 'update any media'
   - 'update any stanford_component_block block content'
   - 'update media'
+  - 'use text format stanford_html'
   - 'use views bulk edit'
   - 'view all media revisions'
   - 'view all revisions'
