--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_custom_order.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_custom_order.yml
@@ -13,7 +13,9 @@ label: casbs_custom_order
 description: ''
 required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: 10
 default_value_callback: ''
 settings:
   min: null
