--- a/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_people_qa.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/views.view.casbs_people_qa.yml
@@ -1,6 +1,6 @@
 uuid: 745ff495-ae86-4476-8b64-5336fd1bd83b
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - field.storage.node.su_casbs_cs_year
