--- a/composer.json
+++ b/composer.json
@@ -376,8 +376,8 @@
             "patch -Ns -r \"\" --no-backup-if-mismatch -p1 < ./patches/htaccess.patch"
         ],
         "sync-casbs": [
-            "drush -y sql:sync @default.dev @default.local",
-            "drush -y rsync @default.dev:%files @default.local:%files"
+            "drush -y sql:sync @default.prod @default.local",
+            "drush -y rsync @default.prod:%files @default.local:%files"
         ]
     }
 }
